--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,7 @@
     "passport": "^0.4.0",
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.2.9",
-    "ws": "^6.1.2"
+    "typeorm": "^0.2.9"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
