--- a/client/angular.json
+++ b/client/angular.json
@@ -1,11 +1,11 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "",
   "projects": {
     "rowurboat": {
-      "root": "",
-      "sourceRoot": "src",
+      "root": "apps/rowurboat",
+      "sourceRoot": "apps/rowurboat/src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {},
@@ -13,17 +13,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/rowurboat",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "dist/apps/rowurboat",
+            "index": "apps/rowurboat/src/index.html",
+            "main": "apps/rowurboat/src/main.ts",
+            "polyfills": "apps/rowurboat/src/polyfills.ts",
+            "tsConfig": "apps/rowurboat/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "apps/rowurboat/src/favicon.ico",
+              "apps/rowurboat/src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "apps/rowurboat/src/styles.css"
             ],
             "scripts": []
           },
@@ -31,8 +31,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "apps/rowurboat/src/environments/environment.ts",
+                  "with": "apps/rowurboat/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -67,17 +67,17 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "main": "apps/rowurboat/src/test.ts",
+            "polyfills": "apps/rowurboat/src/polyfills.ts",
+            "tsConfig": "apps/rowurboat/tsconfig.spec.json",
+            "karmaConfig": "apps/rowurboat/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "apps/rowurboat/src/styles.css"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "apps/rowurboat/src/favicon.ico",
+              "apps/rowurboat/src/assets"
             ]
           }
         },
@@ -85,8 +85,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "apps/rowurboat/tsconfig.app.json",
+              "apps/rowurboat/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -96,13 +96,13 @@
       }
     },
     "rowurboat-e2e": {
-      "root": "e2e/",
+      "root": "apps/rowurboat-e2e",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "apps/rowurboat-e2e/protractor.conf.js",
             "devServerTarget": "rowurboat:serve"
           },
           "configurations": {
@@ -114,7 +114,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "apps/rowurboat-e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "rowurboat"
+  "defaultProject": "rowurboat",
+  "cli": {
+    "defaultCollection": "@nrwl/schematics"
+  }
 }
