--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^10.12.12",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "csafe": "^0.0.2",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "morgan": "~1.9.0",
@@ -19,6 +20,7 @@
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "typeorm": "^0.2.9",
+    "usb": "^1.5.0",
     "ws": "^6.1.2"
   },
   "devDependencies": {
@@ -27,6 +29,8 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.10",
     "@types/morgan": "^1.7.35",
+    "@types/usb": "^1.1.7",
+    "@types/ws": "^6.0.1",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
     "ts-jest": "^23.10.5",
