--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "morgan": "~1.9.0",
+    "node-hid": "^0.7.4",
     "passport": "^0.4.0",
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
