--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "@types/node": "^10.12.12",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
-    "csafe": "^0.0.2",
+    "csafe": "file:../../node-csafe",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "morgan": "~1.9.0",
